--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,8 @@
           box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   color: #fff;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 body {
@@ -15,17 +17,36 @@ body {
   margin: 0 auto;
 }
 
+nav {
+  font-weight: bold;
+}
+
 nav .navbar-brand {
   color: #ffffff !important;
   font-family: "Allura", cursive !important;
   font-style: normal;
-  font-weight: normal;
+  font-weight: bold;
   font-size: 15px;
-  color: #fff;
+}
+
+nav .nav-link {
+  color: #b6b6b6 !important;
+}
+
+nav .nav-link.active {
+  color: #7e2727 !important;
 }
 
 .bg-light {
-  background-color: transparent !important;
+  background-color: #272727 !important;
+  opacity: 0.8;
+}
+
+@media screen and (min-width: 768px) {
+  .bg-light {
+    background-color: transparent !important;
+    opacity: 0.8;
+  }
 }
 
 #welcome {
