--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: #0e100f;
+  background-color: #000000;
 }
 
 .container {
@@ -18,7 +18,7 @@ body {
 }
 
 nav {
-  font-weight: bold;
+  font-weight: normal;
 }
 
 nav .navbar-brand {
@@ -43,12 +43,6 @@ nav .nav-link.active {
 
 .bg-light {
   background-color: #0f1211 !important;
-}
-
-@media screen and (min-width: 768px) {
-  nav {
-    position: static !important;
-  }
 }
 
 #welcome {
@@ -451,6 +445,10 @@ nav .nav-link.active {
   }
 }
 
+#get-in-touch {
+  background: #0E100F;
+}
+
 #get-in-touch .get-in-touch {
   width: 71%;
 }
@@ -601,12 +599,12 @@ footer .footer-copyright {
   }
   footer .guitar {
     position: absolute;
-    top: 65px;
+    top: 150px;
     left: 0;
   }
   footer .guitar-line {
     position: absolute;
-    bottom: 155px;
+    bottom: 13px;
     left: 63px;
   }
 }
