--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,8 @@ body {
 
 nav {
   font-weight: normal;
+  -webkit-box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+          box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 
 nav .navbar-brand {
@@ -42,7 +44,7 @@ nav .nav-link.active {
 }
 
 .bg-light {
-  background-color: #0f1211 !important;
+  background-color: #0e100f !important;
 }
 
 #welcome {
@@ -446,7 +448,7 @@ nav .nav-link.active {
 }
 
 #get-in-touch {
-  background: #0E100F;
+  background: #0e100f;
 }
 
 #get-in-touch .get-in-touch {
@@ -473,12 +475,12 @@ nav .nav-link.active {
 }
 
 #get-in-touch .get-in-touch-form__input {
-  background: #000000;
+  background: #0e100f;
   color: #ffffff;
 }
 
 #get-in-touch .get-in-touch-form__message {
-  background: #000000;
+  background: #0e100f;
   color: #ffffff;
   height: 13rem !important;
 }
@@ -604,7 +606,7 @@ footer .footer-copyright {
   }
   footer .guitar-line {
     position: absolute;
-    bottom: 13px;
+    bottom: 58px;
     left: 63px;
   }
 }
