--- a/css/main.css
+++ b/css/main.css
@@ -35,12 +35,8 @@ nav .nav-link {
   color: #ffffff !important;
 }
 
-nav .nav-link:hover {
-  color: #7e2727 !important;
-}
-
 nav .nav-link.active {
-  color: #7e2727 !important;
+  border-bottom: 3px solid white;
 }
 
 .bg-light {
@@ -138,8 +134,9 @@ nav .nav-link.active {
   background: #fff;
 }
 
-#about-me .about-me__img {
-  border-radius: 34px;
+#about-me .about-me .img-fluid {
+  width: auto !important;
+  height: auto !important;
 }
 
 #about-me .about-me__name {
@@ -263,11 +260,52 @@ nav .nav-link.active {
   color: #424242;
 }
 
-#my-works .my-works .my-works__gallery a:hover,
-#my-works .my-works a:active,
-#my-works .my-works a:focus {
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
+#my-works .my-works__gallery a {
+  position: relative;
+}
+
+#my-works .my-works__overlay {
+  position: absolute;
+  top: 10%;
+  z-index: 1;
+  padding: 1rem;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s ease-in-out;
+  transition: opacity 0.4s ease-in-out;
+}
+
+#my-works .my-works .my-works__gallery a::before {
+  content: "";
+  position: absolute;
+  top: 5rem;
+  right: 0;
+  width: 78%;
+  height: 3px;
+  background-color: #fafafa;
+  margin: 0 auto;
+  opacity: 0;
+  z-index: 10;
+  -webkit-transition: opacity 0.4s ease-in-out;
+  transition: opacity 0.4s ease-in-out;
+}
+
+#my-works .my-works .my-works__gallery a:hover::before,
+#my-works .my-works a:active::before,
+#my-works .my-works a:focus::before {
+  opacity: 1;
+}
+
+#my-works .my-works .my-works__gallery a:hover img,
+#my-works .my-works a:active img,
+#my-works .my-works a:focus img {
+  -webkit-filter: grayscale(100%) blur(5px);
+          filter: grayscale(100%) blur(5px);
+}
+
+#my-works .my-works .my-works__gallery a:hover .my-works__overlay,
+#my-works .my-works a:active .my-works__overlay,
+#my-works .my-works a:focus .my-works__overlay {
+  opacity: 1;
 }
 
 @media screen and (min-width: 768px) {
