--- a/main.scss
+++ b/main.scss
@@ -37,13 +37,13 @@ nav {
 
   .nav-link {
     color: #ffffff !important;
-    &:hover {
-      color: #7e2727 !important;
-    }
+    // &:hover .nav-link {
+    //   // border-bottom: 3px solid white;
+    // }
   }
 
   .nav-link.active {
-    color: #7e2727 !important;
+    border-bottom: 3px solid white;
   }
 }
 .bg-light {
@@ -51,9 +51,9 @@ nav {
 }
 
 @media screen and (min-width: 768px) {
-  nav {
-    // position: static !important;
-  }
+  // nav {
+  //   // position: static !important;
+  // }
 }
 
 #welcome {
@@ -156,8 +156,9 @@ nav {
         background: #fff;
       }
     }
-    &__img {
-      border-radius: 34px;
+    .img-fluid {
+      width: auto !important;
+      height: auto !important;
     }
     &__name {
       text-align: center;
@@ -280,10 +281,51 @@ nav {
         color: #424242;
       }
     }
+
+    &__gallery a {
+      position: relative;
+    }
+
+    &__overlay {
+      position: absolute;
+      top: 10%;
+      z-index: 1;
+      padding: 1rem;
+      opacity: 0;
+      transition: opacity 0.4s ease-in-out;
+    }
+
+    .my-works__gallery a {
+      &::before {
+        content: "";
+        position: absolute;
+        top: 5rem;
+        right: 0;
+        width: 78%;
+        height: 3px;
+        background-color: #fafafa;
+        margin: 0 auto;
+        opacity: 0;
+        z-index: 10;
+        transition: opacity 0.4s ease-in-out;
+      }
+    }
+
     .my-works__gallery a:hover,
     a:active,
     a:focus {
-      transform: scale(0.9);
+      // transform: scale(0.9);
+      &::before {
+        opacity: 1;
+      }
+
+      img {
+        filter: grayscale(100%) blur(5px);
+      }
+
+      .my-works__overlay {
+        opacity: 1;
+      }
     }
   }
 }
