--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,10 @@ nav .nav-link {
   color: #ffffff !important;
 }
 
+nav .nav-link:hover {
+  border-bottom: 3px solid white;
+}
+
 nav .nav-link.active {
   border-bottom: 3px solid white;
 }
